package com.fedu.fedu.entity;

import jakarta.persistence.*;
import lombok.*;

@Getter
@Setter
@Entity
@Builder
@NoArgsConstructor
@AllArgsConstructor
@Table(name = "classrooms")
public class Classroom extends AbstractEntity<Long> {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "classroom_id")
    private Long classroomId;

    @Column(name = "class_name", nullable = false)
    private String className;

    @Column(name = "semester")
    private String semester;

    @Column(name = "description", columnDefinition = "TEXT")
    private String description;
    
    @Builder.Default
    @Column(name = "status", nullable = false, length = 50)
    private String status = "inactive";

    @Builder.Default
    @Column(name = "is_deleted")
    private Boolean isDeleted = false;
}
